<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2875"
    android:backgroundTint="#2B2875"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/maroon_bar_main"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="#870D47"
        android:clickable="false"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:textColor="#BA11B1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/logout_button"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="#00000000"
        android:contentDescription="@string/logout_content_description"
        app:layout_constraintBottom_toBottomOf="@+id/maroon_bar_main"
        app:layout_constraintStart_toStartOf="@+id/maroon_bar_main"
        app:layout_constraintTop_toTopOf="@+id/maroon_bar_main"
        app:srcCompat="@drawable/logout_button"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/close_app_button"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:backgroundTint="#00000000"
        android:clickable="true"
        android:contentDescription="@string/exit_content_description"
        app:layout_constraintBottom_toBottomOf="@+id/maroon_bar_main"
        app:layout_constraintEnd_toEndOf="@+id/maroon_bar_main"
        app:layout_constraintTop_toTopOf="@+id/maroon_bar_main"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="#000000"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button_to_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="149dp"
        android:background="@drawable/login_button"
        android:clickable="true"
        android:labelFor="@id/button_to_create_account"
        android:text="@string/create_account"
        android:textColor="#040404"
        android:minHeight="48dip"
        android:minWidth="140dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_create_account" />

    <EditText
        android:id="@+id/login_name"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="68dp"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/login_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maroon_bar_main" />

    <EditText
        android:id="@+id/login_pw"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="67dp"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/login_verify_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_name" />

    <EditText
        android:id="@+id/login_verify_pw"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="67dp"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/verify_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/button_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pw" />

    <Button
        android:id="@+id/button_to_login"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginStart="159dp"
        android:layout_marginEnd="153dp"
        android:background="@drawable/login_button"
        android:clickable="true"
        android:text="@string/button_login"
        android:textColor="#040404"
        app:layout_constraintBottom_toTopOf="@+id/user_attempts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_verify_pw" />

    <TextView
        android:id="@+id/user_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="131dp"
        android:text="@string/attempts_remaining_5"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/text_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_to_login" />

    <TextView
        android:id="@+id/text_create_account"
        android:layout_width="296dp"
        android:layout_height="44dp"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="54dp"
        android:text="@string/create_or_forgot_password"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_to_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_attempts" />


</androidx.constraintlayout.widget.ConstraintLayout>