<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/maroon_bar"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="#870D47"
        android:clickable="false"
        android:ems="10"
        android:gravity="center"
        android:importantForAutofill="no"
        android:textColor="#BA11B1"
        android:textSize="20sp"
        android:labelFor="@id/maroon_bar"
        android:contentDescription="@string/nav_bar_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/close_reg_button"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:backgroundTint="#00000000"
        android:clickable="true"
        android:contentDescription="@string/exit_content_description"
        app:layout_constraintBottom_toBottomOf="@+id/maroon_bar"
        app:layout_constraintEnd_toEndOf="@+id/maroon_bar"
        app:layout_constraintTop_toTopOf="@+id/maroon_bar"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="#000000"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/reg_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maroon_bar" />

    <EditText
        android:id="@+id/reg_verify_pw"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginBottom="65dp"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/verify_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/button_to_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_pw" />

    <EditText
        android:id="@+id/reg_pw"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/reg_verify_pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_username" />

    <Button
        android:id="@+id/button_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="354dp"
        android:background="@drawable/login_button"
        android:clickable="true"
        android:labelFor="@id/button_to_register"
        android:text="@string/button_register"
        android:textColor="#040404"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_verify_pw" />

</androidx.constraintlayout.widget.ConstraintLayout>