<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#36C6C6"
    android:backgroundTint="#2B2875"
    tools:context=".EventEdit">


    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="339dp"
        android:layout_height="309dp"
        android:layout_marginBottom="2dp"
        android:background="#870D47"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/addEventNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/addEventNotes"
        android:layout_width="339dp"
        android:layout_height="78dp"
        android:background="@drawable/multiline_text_border_outline"
        android:clickable="true"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:gravity="start|top"
        android:hint="@string/event_edit_notes_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="#F4F4F4"
        android:textColorHint="#B8AFAF"
        android:textSize="14sp"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toTopOf="@+id/submit_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <EditText
        android:id="@+id/eventName"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_event_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/enter_event_name"
        android:textColor="#36C6C6"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/timePicker"
        app:layout_constraintEnd_toEndOf="@+id/timePicker"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="348dp"
        android:layout_height="87dp"
        android:layout_marginBottom="1dp"
        android:amPmTextColor="#000000"
        android:clickable="true"
        android:theme="@style/TimePickerStyle"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName" />

    <TextView
        android:id="@+id/time_display"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_below="@+id/timePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:background="#870D47"
        android:backgroundTint="#870D47"
        android:clickable="false"
        android:contentDescription="@string/time_display_content_description"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/time_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/eventName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_Button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/submit_date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="260dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/submit_date_button"
        android:contentDescription="@string/submit_date_content_description"
        android:gravity="center_horizontal|center_vertical"
        android:importantForAutofill="no"
        android:text="@string/submit_date_button"
        android:textColor="#2B2875"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventNotes"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/date_view"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/submit_date_button"
        android:backgroundTint="#870D47"
        android:clickable="false"
        android:contentDescription="@string/date_display_content_description"
        android:gravity="center_horizontal|center_vertical"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submit_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventNotes" />

    <ImageButton
        android:id="@+id/back_Button"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#2B2875"
        android:clickable="true"
        android:contentDescription="@string/back_arrow_content_description"
        android:labelFor="@id/back_Button"
        app:layout_constraintBottom_toTopOf="@+id/eventName"
        app:layout_constraintEnd_toStartOf="@+id/time_display"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488"
        app:srcCompat="@drawable/back_arrow_button"
        app:tint="#41DADA" />


</androidx.constraintlayout.widget.ConstraintLayout>