<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rv_parent"
    android:background="#2B2875"
    android:backgroundTint="#2B2875"
    tools:context=".EventList">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:padding="4dp"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/edittext_insert"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="274dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:inputType="number"
        android:text="1"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/edittext_remove"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/edittext_insert"
        android:layout_marginStart="100dp"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="1"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/three_dots_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignTop="@id/add_event_icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical|end"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#00FFFF"
        android:clickable="true"
        android:contentDescription="@string/edit_event_content_description"
        android:elevation="18dp"
        app:srcCompat="@drawable/three_dots_more_vert_button"
        app:tint="#000000"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/add_event_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#00FFFF"
        android:clickable="true"
        android:contentDescription="@string/add_event_content_description"
        android:elevation="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="#000000" />

    <ImageButton
        android:id="@+id/delete_button1"
        android:layout_width="70dp"
        android:layout_height="73dp"
        android:layout_alignTop="@id/three_dots_button"
        android:layout_alignBottom="@id/three_dots_button"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#00FFFF"
        android:clickable="true"
        android:contentDescription="@string/delete_event_content_description"
        android:elevation="18dp"
        app:srcCompat="@drawable/delete_button"
        app:tint="#000000"
        tools:ignore="DuplicateSpeakableTextCheck" />


</RelativeLayout>