<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:background="#FFFFFF"
    app:cardCornerRadius="20dp"
    tools:Context=".AccessPermission">

    <EditText
        android:id="@+id/user_permission_sms_text"
        android:layout_width="350dp"
        android:layout_height="92dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:text="@string/ask_permission_send_sms"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#000000"
        android:clickable="true"
        android:labelFor="@id/cancel_button"
        android:text="@string/permission_no_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/user_permission_sms_text"
        app:layout_constraintTop_toBottomOf="@+id/user_permission_sms_text"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#000000"
        android:clickable="true"
        android:labelFor="@id/ok_button"
        android:onClick="smsSendMessage"
        android:text="@string/permission_yes_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/user_permission_sms_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="257dp"
        android:layout_height="44dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="Enter Phone Number"
        android:inputType="phone"
        android:textColor="#000000"
        android:textColorHint="#A7A7A8"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_permission_sms_text" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="258dp"
        android:layout_height="93dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Enter SMS Message"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:textColorHint="#A7A7A8"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />
</androidx.constraintlayout.widget.ConstraintLayout>